Fixes the dynamic rleset

--- a/config/dynamic.toml
+++ b/config/dynamic.toml
@@ -364,6 +364,16 @@ repeatable_weight_decrease = 2
 repeatable = 1
 minimum_required_age = 0
 
+["Fanatic"]
+weight = 3
+min_pop = 20
+blacklisted_roles = []
+min_antag_cap = 1
+max_antag_cap = 1
+repeatable_weight_decrease = 2
+repeatable = 1
+minimum_required_age = 0
+
 ["Voidwalker"]
 weight = 5
 min_pop = 30
